--- a/Web.html
+++ b/Web.html
@@ -64,38 +64,49 @@
                 <br>
                 Over the Course of my career at NYU Shanghai, I have learned and honed my skills
                 in:
-                <code>Python, C, Java, HTML, JavaScript, CSS</code>
+                <code class="code">Python, C, Java, HTML, JavaScript, CSS</code>
                 , while taking the courses:
-                <div class="colortext">
-                    Intro to Computer Programming, Intro to
-                    Computer Science, Data Structures, Computer Architecture, Introduction
-                    to
-                    Computer Music, Calculus, Discrete Mathematics, Computer Graphics and
-                    Computer
-                    Networking
-                </div>
-                <br>
-                and learning at my internship as a UX Designer for R/GA Shanghai
-                <br>
-                For my business studies, I have taken:
-                <br>
-                <br>
-                <div class="colortext">
-                    Microeconomics, Statistics for Business and Economics, Principles of
-                    Financial
-                    Accounting, Intro to Marketing, and
-                    Economics for Global Business
-                </div>
-                <br>
-                My hobbies are in: <code>digital art, video games, and bouldering</code>.
-                <br>
-                <br>
-                I'm currently hoping to apply my skills in programming and artwork, by working
-                on
-                projects in video game development.
+            <div class="colortext">
+                Intro to Computer Programming, Intro to
+                Computer Science, Data Structures, Computer Architecture, Introduction
+                to
+                Computer Music, Calculus, Discrete Mathematics, Computer Graphics and
+                Computer
+                Networking
+            </div>
+            <br>
+            and learning at my internship as a UX Designer for R/GA Shanghai
+            <br>
+            For my business studies, I have taken:
+            <br>
+            <br>
+            <div class="colortext">
+                Microeconomics, Statistics for Business and Economics, Principles of
+                Financial
+                Accounting, Intro to Marketing, and
+                Economics for Global Business
+            </div>
+            <br>
+            My hobbies are in: <code class="code">digital art, video games, and bouldering</code>.
+            <br>
+            <br>
+            I'm currently hoping to apply my skills in programming and artwork, by working
+            on
+            projects in video game development.
             </p>
         </div>
-
+        <div id="contact">
+            CONTACT ME
+            <br>
+            <a href="mailto:aliu@lediur.com">e-mail</a>
+            <br>
+            <a href="tel:+18327048589">+1(832)704-8589</a>
+            <br>
+            <a href="/downloads/resume.pdf" download>resume</a>
+        </div>
+        <div id="backtotop">
+            back to top
+        </div>
 </body>
 
 </html>
