implemented projects page

--- a/Web.html
+++ b/Web.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 
-    <title>Profile</title>
+    <title>About</title>
 
     <script src="js/jquery.js"></script>
     <script src="js/script.js"></script>
@@ -32,7 +32,7 @@
             </li>
 
             <li>
-                <a href="#proj" id="projects">PROJECTS</a>
+                <a href="projects.html" id="projects">PROJECTS</a>
             </li>
 
             <li>
@@ -100,13 +100,15 @@
             <br>
             <a href="mailto:aliu@lediur.com">e-mail</a>
             <br>
-            <a href="tel:+18327048589">+1(832)704-8589</a>
+            USA: <a href="tel:+18327048589">+1(832)704-8589</a>
+            China: <a href="tel:+8615618987091">+86(156)1898-7091</a>
             <br>
             <a href="/downloads/resume.pdf" download>resume</a>
         </div>
         <div id="backtotop">
             back to top
         </div>
+    </div>
 </body>
 
 </html>
