finished implementing project page, and started experiences page

--- a/Web.html
+++ b/Web.html
@@ -36,7 +36,7 @@
             </li>
 
             <li>
-                <a href="#exp" id="experiences">EXPERIENCES</a>
+                <a href="experiences.html" id="experiences">EXPERIENCES</a>
             </li>
         </ul>
     </div>
