reorganized and completed experiences page

--- a/Web.html
+++ b/Web.html
@@ -64,18 +64,14 @@
                 <br>
                 Over the Course of my career at NYU Shanghai, I have learned and honed my skills
                 in:
-                <code class="code">Python, C, Java, HTML, JavaScript, CSS</code>
+                <code
+                    class="code">Python, MySQL, MongoDB SQLite, C, Java, HTML, CSS, JavaScript, R, Tableau, JMP, and Photoshop</code>
                 , while taking the courses:
             <div class="colortext">
-                Intro to Computer Programming, Intro to
-                Computer Science, Data Structures, Computer Architecture, Introduction
-                to
-                Computer Music, Calculus, Discrete Mathematics, Computer Graphics and
-                Computer
-                Networking
+                Design & Analysis of Algorithms, Data-Driven Decision Making, Database Design and Implementation,
+                Computer Networking, Computer Architecture, Data Structures, Introduction to Computer Music, Intro to
+                Game Dev, Computer Graphics, Introduction to Computer Science, Introduction to Computer Programming
             </div>
-            <br>
-            and learning at my internship as a UX Designer for R/GA Shanghai
             <br>
             For my business studies, I have taken:
             <br>
@@ -83,8 +79,8 @@
             <div class="colortext">
                 Microeconomics, Statistics for Business and Economics, Principles of
                 Financial
-                Accounting, Intro to Marketing, and
-                Economics for Global Business
+                Accounting, Intro to Marketing,
+                Economics for Global Business, Business of Video Games, and Data-driven Decision Making.
             </div>
             <br>
             My hobbies are in: <code class="code">digital art, video games, and bouldering</code>.
@@ -99,11 +95,6 @@
             CONTACT ME
             <br>
             <a href="mailto:aliu@lediur.com">e-mail</a>
-            <br>
-            USA: <a href="tel:+18327048589">+1(832)704-8589</a>
-            China: <a href="tel:+8615618987091">+86(156)1898-7091</a>
-            <br>
-            <a href="/downloads/resume.pdf" download>resume</a>
         </div>
         <div id="backtotop">
             back to top
