--- a/experiences.html
+++ b/experiences.html
@@ -27,7 +27,7 @@
         </div>
         <ul id="nav">
             <li>
-                <a href="Web.html" id=" about">ABOUT</a>
+                <a href="index.html" id=" about">ABOUT</a>
             </li>
 
             <!-- <li>
