fixed sizing, mobile friendly!

--- a/experiences.html
+++ b/experiences.html
@@ -46,14 +46,14 @@
 
     <div id="experience-block">
         <div id="resume">
-            <h2><a href="downloads/resume.pdf" download><i class="fas fa-file-download"></i> Resume PDF</a></h2>
+            <a href="downloads/resume.pdf" download><i class="fas fa-file-download"></i> Resume PDF</a>
         </div>
 
-        <h2>Experiences</h2>
+        Experiences
         <div class="title-indent">
-            <h4>Software Engineer/ User Experience Design Intern -- 05/2019 - 08/2019</h4>
+            Software Engineer/ User Experience Design Intern -- 05/19 - 08/19</h4>
             <div class="colortext">
-                <h4>RGA Shanghai</h4>
+                RGA Shanghai
             </div>
         </div>
         <div class="text-indent">
@@ -63,9 +63,9 @@
         </div>
         <br>
         <div class="title-indent">
-            <h4>Learning Assistant for Intro to Computer Programming -- 09/2018 - 05-2019</h4>
+            Learning Assistant for Intro to Computer Programming -- 09/18 - 05-19
             <div class="colortext">
-                <h4>NYU Shanghai Academic Resource Center - Department of Computer Science</h4>
+                NYU Shanghai Academic Resource Center - Department of Computer Science
             </div>
         </div>
         <div class="text-indent">
@@ -78,11 +78,11 @@
 
     </div>
     <div id="involvement-block">
-        <h2>Involvement</h2>
+        Involvement
         <div class="title-indent">
-            <h4>Marketing Committee -- 08/2019 - 05/2020</h4>
+            Marketing Committee -- 08/2019 - 05/2020
             <div class="colortext">
-                <h4>NYU Asian Heritage Month</h4>
+                NYU Asian Heritage Month
             </div>
         </div>
         <div class="text-indent">
@@ -93,9 +93,9 @@
         </div>
         <br>
         <div class="title-indent">
-            <h4>Director of Events -- 09/2018 - 05/2019</h4>
+            Director of Events -- 09/2018 - 05/2019
             <div class="colortext">
-                <h4>NYU Shanghai x HSBC Annual Hackathon</h4>
+                NYU Shanghai x HSBC Annual Hackathon
             </div>
         </div>
         <div class="text-indent">
@@ -108,9 +108,9 @@
         </div>
         <br>
         <div class="title-indent">
-            <h4>Founding Member and Secretary -- 09/2018 - 05/2019</h4>
+            Founding Member and Secretary -- 09/2018 - 05/2019
             <div class="colortext">
-                <h4>SPLICE Computer Science Club</h4>
+                SPLICE Computer Science Club
             </div>
         </div>
         <div class="text-indent">
@@ -120,9 +120,9 @@
         </div>
         <br>
         <div class="title-indent">
-            <h4>President -- 09/2018 - 05/2019</h4>
+            President -- 09/2018 - 05/2019
             <div class="colortext">
-                <h4>NYUSH Volleyball Club</h4>
+                NYUSH Volleyball Club
             </div>
         </div>
         <div class="text-indent">
