--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <ul id="nav">
             <li>
-                <a href="#about" id="about">ABOUT</a>
+                <a href="#about" id="about-but">ABOUT</a>
             </li>
 
             <!-- <li>
@@ -51,17 +51,17 @@
 
     <div id="aboutme">
         <div id="about">
-            <h4>
-                A LITTLE ABOUT ME
-            </h4>
+
+            A LITTLE ABOUT ME
+
         </div>
         <div id="about-text">
             <p>
-                Hi, i'm Andrew Liu and i'm from Houston, Texas.
+                Hi, I'm Andrew Liu and I'm from Houston, Texas.
                 <br>
                 <br>
                 I'm a student at New York University
-                Shanghai (NYUSH) where i'm
+                Shanghai (NYUSH) where I'm
                 pursuing a major in Computer Science, and a minor in Business.
                 <br>
                 <br>
