--- a/projects.html
+++ b/projects.html
@@ -46,15 +46,15 @@
 
     <div id="projectblock">
         <div id="project">
-            <h2>
-                PROJECTS
-            </h2>
+
+            PROJECTS
+
         </div>
         <div class="proj-hover">
             <div class="projects-title">
-                <h3>Mile 666</h3>
+                Mile 666
                 <div class="project-date">
-                    <h3>Spring 2020</h3>
+                    Spring 2020
                 </div>
             </div>
             <div class="projects">
@@ -62,29 +62,25 @@
                     <img src="img/Mile66(6).gif">
                 </div>
                 <div class="project-text">
-                    <h5>
-                        Mile 666 is a prototype game where you play as a tank driver as you are deployed to combat the
-                        giant
-                        hell portal that has opened. As you make your way towards destroying the gate to hell, you must
-                        shoot
-                        down enemies and avoid obstacles in a bullet-hell, infinite-runner mashup game.
-                    </h5>
-
-                    <h5>
-                        <a href="https://not-absent.itch.io/mile666">Play Online</a> password: pass
-                        <br>
-                        <a href="/downloads/Mile666.zip" download><i class="fas fa-file-download"></i> Download
-                            Executable</a>
-                    </h5>
+                    Mile 666 is a prototype game where you play as a tank driver as you are deployed to combat the
+                    giant
+                    hell portal that has opened. As you make your way towards destroying the gate to hell, you must
+                    shoot
+                    down enemies and avoid obstacles in a bullet-hell, infinite-runner mashup game.
+                    <br>
+                    <a href="https://not-absent.itch.io/mile666">Play Online</a> password: pass
+                    <br>
+                    <a href="/downloads/Mile666.zip" download><i class="fas fa-file-download"></i> Download
+                        Executable</a>
                 </div>
             </div>
         </div>
 
         <div class="proj-hover">
             <div class="projects-title">
-                <h3>IncubusMD</h3>
+                IncubusMD
                 <div class="project-date">
-                    <h3>Spring 2020</h3>
+                    Spring 2020
                 </div>
             </div>
             <div class="projects">
@@ -92,33 +88,29 @@
                     <img src="img/IncubusMD.gif">
                 </div>
                 <div class="project-text">
-                    <h5>
-                        Done for Global Game Jam 2020, at Playcrafting + Microsoft (NYC)!
-                        <br>
-                        Incubus M.D is a platform game about exploring the mind of a patient and diagnosing their
-                        problems.
-                        As
-                        the game progresses, you learn detailed information about each patient and their issues. Each
-                        level
-                        is
-                        inspired by each character's fears, dreams, and thoughts. You will complete each mission by
-                        defeating
-                        the final boss.
-                    </h5>
-
-                    <h5>
-                        <a href="/downloads/incubusmd.zip" download><i class="fas fa-file-download"></i> Download
-                            Executable</a>
-                    </h5>
+                    Done for Global Game Jam 2020, at Playcrafting + Microsoft (NYC)!
+                    <br>
+                    Incubus M.D is a platform game about exploring the mind of a patient and diagnosing their
+                    problems.
+                    As
+                    the game progresses, you learn detailed information about each patient and their issues. Each
+                    level
+                    is
+                    inspired by each character's fears, dreams, and thoughts. You will complete each mission by
+                    defeating
+                    the final boss.
+                    <br>
+                    <a href="/downloads/incubusmd.zip" download><i class="fas fa-file-download"></i> Download
+                        Executable</a>
                 </div>
             </div>
         </div>
 
         <div class="proj-hover">
             <div class="projects-title">
-                <h3>Narrative Game</h3>
+                Narrative Game
                 <div class="project-date">
-                    <h3>Spring 2020</h3>
+                    Spring 2020
                 </div>
             </div>
             <div class="projects">
@@ -126,27 +118,23 @@
                     <img src="img/Narrative.png">
                 </div>
                 <div class="project-text">
-                    <h5>
-                        Narrative Game Mod done in 2 weeks for a game development course. The mod introduces several new
-                        npcs, different dialogues, total reskin, new area, as well as shaders.
-                        Challenge the tower as you encounter Duke Blue and challenge him in a duel for his estate! Each
-                        floor explores combat in a different video game genre as you challenge Duke Blue over and over!
-                        Currently only the first floor is implemented.
-                    </h5>
-
-                    <h5>
-                        <a href="/downloads/Narrative Game Mod-b.zip" download><i class="fas fa-file-download"></i>
-                            Download Executable</a>
-                    </h5>
+                    Narrative Game Mod done in 2 weeks for a game development course. The mod introduces several new
+                    npcs, different dialogues, total reskin, new area, as well as shaders.
+                    Challenge the tower as you encounter Duke Blue and challenge him in a duel for his estate! Each
+                    floor explores combat in a different video game genre as you challenge Duke Blue over and over!
+                    Currently only the first floor is implemented.
+                    <br>
+                    <a href="/downloads/Narrative Game Mod-b.zip" download><i class="fas fa-file-download"></i>
+                        Download Executable</a>
                 </div>
             </div>
         </div>
 
         <div class="proj-hover">
             <div class="projects-title">
-                <h3>Restoration</h3>
+                Restoration
                 <div class="project-date">
-                    <h3>Spring 2019</h3>
+                    Spring 2019
                 </div>
             </div>
 
@@ -154,21 +142,15 @@
                 <div class="project-img">
                     <img src="img/restoration.png">
                 </div>
-                <div class="project-text">
-                    <h5>
-                        Done for Global Game Jam 2019 at GGJ China 2019 X CiGA Shanghai-Minghang!
-                        <br>
-                        Restoration follows the elderly Martin the Fox. He has received an eviction notice in the mail,
-                        so he attempts to get to the top of a multi-purpose office building and speak with the CEO. He
-                        is a very sentimental father, as he keeps all of his sacred memories in his scrapbook. The power
-                        of reliving his memories will soon come into play as he sneaks past security and knocks out
-                        baddies. An old man getting violent? Not exactly. A dungeon crawler, with all original assets.
-                    </h5>
-
-                    <h5>
-                        <a href="/downloads/Narrative Game Mod-b.zip" download><i class="fas fa-file-download"></i>
-                            Download Executable</a>
-                    </h5>
+                <div class="project-text" Done for Global Game Jam 2019 at GGJ China 2019 X CiGA Shanghai-Minghang! <br>
+                    Restoration follows the elderly Martin the Fox. He has received an eviction notice in the mail,
+                    so he attempts to get to the top of a multi-purpose office building and speak with the CEO. He
+                    is a very sentimental father, as he keeps all of his sacred memories in his scrapbook. The power
+                    of reliving his memories will soon come into play as he sneaks past security and knocks out
+                    baddies. An old man getting violent? Not exactly. A dungeon crawler, with all original assets.
+                    <br>
+                    <a href="/downloads/Narrative Game Mod-b.zip" download><i class="fas fa-file-download"></i>
+                        Download Executable</a>
                 </div>
             </div>
         </div>
