--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
             </li> -->
 
             <li>
-                <a href="#proj" id="projects">PROJECTS</a>
+                <a href="projects.html" id="projects">PROJECTS</a>
             </li>
 
             <li>
