--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 Over the Course of my career at NYU Shanghai, I have learned and honed my skills
                 in:
                 <code
-                    class="code">Python, MySQL, MongoDB SQLite, C, Java, HTML, CSS, JavaScript, R, Tableau, JMP, and Photoshop</code>
+                    class="code">Python, JavaScript, Express / NodeJS, JQuery, MySQL, MongoDB SQLite, C, Java, HTML, CSS, R, Tableau, JMP, and Photoshop</code>
                 , while taking the courses:
             <div class="colortext">
                 Design & Analysis of Algorithms, Data-Driven Decision Making, Database Design and Implementation,
@@ -86,7 +86,7 @@
                 Economics for Global Business, Business of Video Games, and Data-driven Decision Making.
             </div>
             <br>
-            My hobbies are in: <code class="code">digital art, video games, and bouldering</code>.
+            My hobbies are in: <code class="code">digital art, video games, game development, and bouldering</code>.
             <br>
             <br>
             I'm currently hoping to apply my skills in programming and artwork, by working
